--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         android:text="@string/add_task"
         android:textSize="30sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,10 +76,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="40dp"
+        android:onClick="showSubmittedMessage"
         android:text="Add Task"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_task_description"
-        android:onClick="showSubmittedMessage"/>
+        app:layout_constraintTop_toBottomOf="@+id/input_task_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
