--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -71,42 +71,6 @@
         app:layout_constraintBottom_toTopOf="@+id/input_task_description"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="24dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_task_description">
-
-        <RadioButton
-            android:id="@+id/radio_team1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onTeamRadioButtonClicked"
-            android:paddingRight="20dp"
-            android:text="Team 1" />
-
-        <RadioButton
-            android:id="@+id/radio_team2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onTeamRadioButtonClicked"
-            android:paddingRight="20dp"
-            android:text="Team 2" />
-
-        <RadioButton
-            android:id="@+id/radio_team3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onTeamRadioButtonClicked"
-            android:text="Team 3" />
-    </RadioGroup>
-
     <Button
         android:id="@+id/button_add_task"
         android:layout_width="wrap_content"
@@ -116,6 +80,17 @@
         android:onClick="showSubmittedMessage"
         android:text="Add Task"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner_select_team" />
+
+    <Spinner
+        android:id="@+id/spinner_select_team"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:padding="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/input_task_description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
