--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -75,4 +75,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_my_tasks" />
 
+    <Button
+        android:id="@+id/sign_out_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:text="Sign Out"
+        app:layout_constraintEnd_toStartOf="@+id/button_settings"
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="signoutCurrentUser"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
