--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -39,5 +39,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_description" />
 
+    <ImageView
+        android:id="@+id/task_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/task_state"
+        app:srcCompat="@mipmap/ic_launcher_round" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
