--- a/app/src/main/res/layout/activity_task_detail.xml
+++ b/app/src/main/res/layout/activity_task_detail.xml
@@ -68,10 +68,10 @@
         android:id="@+id/delete_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:onClick="deleteTask"
-        android:text="Button"
+        android:text="Delete Task"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/task_description" />
 
